@@ -9,6 +9,7 @@ Additions:
 Improvements:
 
     * most allocations moved to mempools
+    * support GNUTLS 3.x
 
 Eet 1.5.0
 
